Versão 2.0 (Swagger Configurado)
